# rs-bar

./: CLAUDE.md  Cargo.toml  README.md  nohup.out
assets/: default-theme.css
docs/superpowers/plans/: 2026-04-30-relm4-migration-plan.md  2026-05-15-network-traffic-widget.md
docs/superpowers/specs/: 2026-04-30-relm4-migration-design.md  2026-05-15-network-traffic-widget-design.md
src/: config.rs  hub.rs  main.rs  niri.rs
src/config/: intel.rs  macbook.rs  mod.rs
src/gpui_bar/: mod.rs  niri.rs
src/gpui_bar/config/: intel.rs  macbook.rs  mod.rs
src/gpui_bar/theme/: mod.rs  nord.rs
src/gpui_bar/widgets/: battery.rs  bluetooth.rs  brightness.rs  capslock.rs  clock.rs  cpu_freq.rs  cpu_temp.rs  cpu_usage.rs  date.rs  fcitx.rs  gpu_busy.rs  memory.rs  minimap.rs  mod.rs  pkg_update.rs  power.rs  power_draw.rs  tray.rs  volume.rs  wifi.rs  window_title.rs  wireguard.rs  workspaces.rs
src/iced_bar/: mod.rs
src/relm4_bar/: app.rs  bar.rs  mod.rs  style.rs
src/relm4_bar/config/: intel.rs  macbook.rs  mod.rs
src/relm4_bar/hub/: battery.rs  bluetooth.rs  brightness.rs  capslock.rs  cpu_freq.rs  cpu_temp.rs  cpu_usage.rs  fcitx.rs  gpu_busy.rs  memory.rs  mod.rs  net_traffic.rs  niri.rs  pkg_update.rs  power_draw.rs  sys.rs  tray.rs  volume.rs  wifi.rs  wireguard.rs
src/relm4_bar/theme/: mod.rs  nord.rs  tokens.rs
src/relm4_bar/widgets/: battery.rs  battery_draw.rs  bluetooth.rs  brightness.rs  capslock.rs  clock.rs  cpu_draw.rs  cpu_freq.rs  cpu_freq_graph.rs  cpu_temp.rs  cpu_usage.rs  date.rs  fcitx.rs  gpu_busy.rs  gpu_draw.rs  memory.rs  minimap.rs  mod.rs  net_traffic.rs  notch.rs  pkg_update.rs  popover.rs  power.rs  psys_draw.rs  tray.rs  util.rs  volume.rs  wifi.rs  window_title.rs  wireguard.rs  workspaces.rs
src/theme/: nord.rs
src/widgets/: battery.rs  bluetooth.rs  brightness.rs  capslock.rs  clock.rs  cpu_freq.rs  cpu_temp.rs  cpu_usage.rs  date.rs  fcitx.rs  gpu_busy.rs  memory.rs  minimap.rs  mod.rs  notch.rs  pkg_update.rs  power.rs  power_draw.rs  tray.rs  volume.rs  wifi.rs  window_title.rs  wireguard.rs  workspaces.rs
