[package]
name = "rs-bar"
version = "0.1.0"
edition = "2024"

[dependencies]

gpui = { git = "https://github.com/zed-industries/zed", branch = "main", features = [
  "wayland",
] }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", features = [
  "wayland",
] }

chrono = "0.4"
linicon = "2.3"
niri-ipc = "25.11"
png = "0.17"
system-tray = "0.8"
tokio = { version = "1", features = ["rt", "sync"] }
uuid = "1"

async-channel = "2"
libc = "0.2"

serde_json = "1"

anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
