[package]
name = "rs-bar"
version = "0.1.0"
edition = "2024"

[dependencies]

gpui = { git = "https://github.com/zed-industries/zed", branch = "main", features = [
  "wayland",
] }
gpui_platform = { git = "https://github.com/zed-industries/zed", branch = "main", features = [
  "wayland",
] }

chrono = "0.4"
linicon = "2.3"
niri-ipc = "26.4"
png = "0.17"
system-tray = "0.8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync", "time", "macros", "process"] }
uuid = "1"

async-channel = "2"
libc = "0.2"

serde_json = "1"

iced = "0.14"

anyhow = "1.0.102"
env_logger = "0.11.10"
log = "0.4.29"
iced_layershell = "0.17.1"

# Relm4/GTK4 backend (selected at runtime via the `--relm` flag).
relm4 = "0.10"
relm4-components = "0.10"
gtk = { package = "gtk4", version = "0.10", features = ["v4_18"] }
gtk4-layer-shell = "0.6"
glib = "0.21"
gio = "0.21"
gdk = { package = "gdk4", version = "0.10" }

# Override the git-dep GPUI with our locally-vendored fork so we can patch it.
# The vendored copy lives in ./vendor/zed and started from the same pinned
# commit as the git dep (see Cargo.lock before vendoring).
[patch."https://github.com/zed-industries/zed"]
gpui = { path = "vendor/zed/crates/gpui" }
gpui_linux = { path = "vendor/zed/crates/gpui_linux" }
gpui_platform = { path = "vendor/zed/crates/gpui_platform" }
gpui_macros = { path = "vendor/zed/crates/gpui_macros" }
gpui_tokio = { path = "vendor/zed/crates/gpui_tokio" }
gpui_util = { path = "vendor/zed/crates/gpui_util" }
gpui_wgpu = { path = "vendor/zed/crates/gpui_wgpu" }
